// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge should render badge without border 1`] = `
<div
  className="ui-badge-badge ui-badge-badge_no-border"
>
  Badge title
</div>
`;

exports[`Badge should render content without badge when badge is not visible 1`] = `
<div
  className="ui-badge"
>
  Badge Content
  <noscript />
</div>
`;

exports[`Badge should render left arrow 1`] = `
<div
  className="ui-badge-badge ui-badge-badge_arrow-left"
>
  Badge title
  <div
    className="ui-badge__border"
  />
  <span
    className="ui-badge-badge-arrow"
  />
</div>
`;

exports[`Badge should render right arrow 1`] = `
<div
  className="ui-badge-badge ui-badge-badge_arrow-right"
>
  Badge title
  <div
    className="ui-badge__border"
  />
  <span
    className="ui-badge-badge-arrow"
  />
</div>
`;

exports[`Badge should return content inside container if title not provided 1`] = `
<div
  className="ui-badge ui-badge_visible"
>
  Badge Content
</div>
`;

exports[`Badge should return noscript if children and title not provided 1`] = `""`;

exports[`Badge should return only badge if content not provided 1`] = `
<div
  className="ui-badge-badge"
>
  Badge title
  <div
    className="ui-badge__border"
  />
</div>
`;

exports[`Badge should use position prop if content provided 1`] = `
<div
  className="ui-badge ui-badge_visible"
>
  Badge Content
  <div
    className="ui-badge-badge ui-badge-badge_right"
  >
    Badge title
    <div
      className="ui-badge__border"
    />
  </div>
</div>
`;
